# Raylib-Game-Engine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/include/: entities.hpp  game.hpp  interfaces.hpp  objectHandlers.hpp  settings.hpp
Editor/src/: game.cpp  main.cpp  resourceManager.cpp
RRE/: CMakeLists.txt
RRE/include/: game.hpp  settings.hpp
RevRLCore/: CMakeLists.txt
RevRLCore/include/: RevRLCore.hpp  game.hpp  interfaces.hpp  objects.hpp  resourceManager.hpp  viewRenderer.hpp
RevRLCore/src/: RevRLCore.cpp  game.cpp  interfaces.cpp  objects.cpp  resourceManager.cpp  viewRenderer.cpp
RevRLImGui/: CMakeLists.txt
RevRLImGui/include/: ImGuiHandler.hpp
cmake/: RREConfig.cmake.in
deprecated/: resourceManager.cpp  resourceManager.hpp
examples/: CMakeLists.txt  player.cpp  simple_draw.cpp
include/: CBU.hpp  QDU.hpp  RRE.hpp  RRE_Aliases.hpp  export.h  game.hpp  interfaces.hpp  resourceManager.hpp
include/instanceManager/: instanceManager.hpp
include/objects/: composites.hpp  primitives.hpp  textures.hpp
include/types/: vectors.hpp
src/: RRE.cpp  game.cpp  resourceManager.cpp
src/objects/: composites.cpp  primitives.cpp  textures.cpp
trash/: trashFolderInfo.txt
